# cuda-raytracer

./: .gitignore  CMakeLists.txt  README.md  build_and_run.bat  build_and_run_debug.bat  build_and_run_release.bat  imgui.ini
include/cuda-raytracer/: hit_details.hpp  image.hpp  random_num_gen.hpp  renderer.hpp  types.hpp  utils.hpp
include/cuda-raytracer/materials/: dielectric.hpp  lambertian_diffuse.hpp  material.hpp  metal.hpp
include/cuda-raytracer/math/: float3.hpp  ray.hpp  utils.hpp
include/cuda-raytracer/scene/: scene.hpp  sphere.hpp
src/: CMakeLists.txt  image.cpp  image.cu  main.cpp  main.cu  renderer.cpp  renderer.cu
src/materials/: dielectric.cpp  dielectric.cu  lambertian_diffuse.cpp  lambertian_diffuse.cu  material.cu  metal.cpp  metal.cu
src/math/: float3.cpp
src/scene/: scene.cpp  scene.cu  sphere.cpp  sphere.cu
test/: CMakeLists.txt  float3_test.cpp  float3_test.hpp  main.cpp  ray_test.hpp
